# vision-demo

./: .gitignore  CMakeLists.txt  main.cpp
vision-model/: CMakeLists.txt  Detector.cpp  Detector.hpp  Interface.hpp  criterion.hpp  utils.hpp
vision-model/architecture/: AuxiliaryConvolutions.cpp  AuxiliaryConvolutions.hpp  CMakeLists.txt  PredictionConvolutions.cpp  PredictionConvolutions.hpp
vision-model/backbone/: CMakeLists.txt  VGG.cpp  VGG.hpp
vision-pipeline/: CMakeLists.txt  ImageAugmentation.cpp  ImageAugmentation.hpp  ImagePreprocessing.cpp  ImagePreprocessing.hpp  Interface.hpp  utils.hpp
